--- a/style.css
+++ b/style.css
@@ -1,3 +1,51 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: #EFC6A7;
+    
+}
+.wrapper{
+    max-width: 100wh;
+    height: 100vh;
+    margin: 0 auto;
+    background-image: url('./image/fon4.jpg');
+    background-size: cover;
+    background-position:center ; 
+    font-size: 20px;  
+   
+}
+
+.container{
+    padding-top: 10%;
+    display: flex;
+    flex-direction: column;
+    gap: 130px;
+    align-items: center;
+    margin-bottom: 100px;
+    /* position: relative; */
+}
+.resume{
+    position: absolute!important;
+    /* left: 100px */
+}
+/* ======== HEADER ======= */
+.header{
+    position: relative;
+}
+.selected_language{
+    position: absolute;
+    right: 2%;
+}
+#language{
+    width: 150px;
+    height: 40px;
+    border-radius: 15px;
+    text-align: center;
+    margin-top: 5%;
+}
+/*  */
+
 .text-container {
     display: flex;
 }
@@ -6,10 +54,25 @@
     display: none;
 }
 
-/* .ru {
-    display: none;
-} 
+/* TITLE */
+    .title{
+        max-width: 80%;
+        position: relative;
+        font-size: 28px;
+        text-align: center;
 
-.en {
-    display: block;
-} */
+    }
+
+/* UL -LI */
+
+.list-item{
+    list-style-type: none;
+    margin-top: 2%;
+}
+.list-item:hover{
+    color: rgb(141, 110, 70);
+}
+.list-item a{
+ text-decoration: none;
+ font-size: 26px;
+}
