--- a/style.css
+++ b/style.css
@@ -75,3 +75,18 @@
  text-decoration: none;
  font-size: 26px;
 }
+/* ======= REACT ========== */
+.react{
+    padding-bottom: 200px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.react_ul>li{
+    font-size: 28px;
+}
+.react_link a{ 
+    font-size: 24px;
+    margin-top: 3%;
+}
+
